Changelog
=========

1.0 (unreleased)
----------------

- #2536097: Fix path for inherited folders and replace the URL with the path

- #3417177: Avoid inlinevalidation for datetime picker

- #3411332: When moving an item, update the library UID

- #2651480: Fix issue with path generation for folder_contents dialogs

- Sort local and parent content together.

- Sort before we convert to objects.

- Only show content that user has permissions to see on PROPFIND

- hide workflow and actions menu for proxied content

- monkey patch base action to not work with proxied content

- override folder contents

- add compiled js

- remove edit action and add proxied class to folder contents row

- #2643812: Return if the library doesn't have an intids id.
  [JL 2019-03-18]

- #2696850: Set correct meta_type for library and library_folder.
  [JL 2019-04-19]

- #2696860: Sort items after local and parent results have been combined.
  [JL 2019-04-19]

- #2651480: Fix issue with path generation for folder_contents dialogs
  [JL 2019-05-15]

- #2702319: Include a modified version of inlinevalidation that will not submit
  files, and use a separate view to validate their filenames
  [JL 2019-05-29]

- Fix tests.
  [JL 2019-06-21]

- #2836989: Don't show byline viewlet for folder proxies.
  [JL 2019-08-09]

- #2926580: Don't add navigation portlet to library if it already exists.
  [JL 2019-09-11]

- #3354799: Use separate search for parent folders.
  [JL 2020-05-29]

- #3366142: Remove DelegatingSpecification.
  [JL 2020-06-08]

- #3366142: Add doc strings to classes.
  [JL 2020-06-08]

- #3366142: Add logging for patch
  [JL 2020-06-08]

- #2536097: Add cues for source of file to folder listing and folder contents.
  [JL 2020-06-30]