@@ -67,3 +67,6 @@ Changelog
 
 - #2536097: Add cues for source of file to folder listing and folder contents.
   [JL 2020-06-30]
+
+- #2536097: Don't depend on afsoc.plone make collective.alias a soft dependency.
+  [JL 2020-07-28]
